Improve the API support
